--- a/MyThesis/Simulator/app/src/createShipDialog/create-ship-dialog.html
+++ b/MyThesis/Simulator/app/src/createShipDialog/create-ship-dialog.html
@@ -51,6 +51,6 @@
 </div>
 
 <div class="modal-footer">
-    <button class="btn btn-primary" type="button" ng-click="createShip()">Đăng Ký</button>
+    <button class="btn btn-primary" type="button" ng-click="createShip()">Thêm</button>
     <button class="btn btn-warning" type="button" ng-click="closeDialog()">Hủy</button>
 </div>
