--- a/MyThesis/Simulator/app/src/ship/ship.html
+++ b/MyThesis/Simulator/app/src/ship/ship.html
@@ -1,15 +1,15 @@
 ﻿<div class="alert alert-info">
-    <button type="button" class="close">&times;</button>
+    <button type="button" class="close" ng-click="vm.removeShip()">&times;</button>
     <table class="table table-bordered ship-info-table ">
         <tbody>
         <tr>
             <td>Mã tàu: {{vm.shipInfo.Id}}</td>
-            <td><button class="btn btn-success">Gửi tọa độ</button></td>
+            <td><button class="btn btn-success" ng-click="vm.sendLocation()">Gửi tọa độ</button></td>
         </tr>
         <tr>
-            <td>Hướng di chuyển: {{vm.currentMovingAngle}}</td>
+            <td>Hướng di chuyển: <input type="text" ng-model="vm.currentMovingAngle" /></td>
             <td>
-                Tự động gửi tọa độ: <input type="checkbox" ng-model="vm.autoSendLocationStatus" ng-change="vm.logger()"/>
+                Tự động gửi tọa độ: <input type="checkbox" ng-model="vm.autoSendLocationStatus" ng-change="vm.autoSendLocation()">
             </td>
         </tr>
         <tr>
