--- a/MyThesis/Simulator/app/src/simulatorSettingDialog/simulator-setting-dialog.html
+++ b/MyThesis/Simulator/app/src/simulatorSettingDialog/simulator-setting-dialog.html
@@ -18,6 +18,18 @@
                           rz-slider-options="sendLocationTimeoutSlider.options"></rzslider>
             </div>
         </div>
+        <div class="form-group">
+            <label class="col-sm-5 control-label">Cập nhật tọa độ sau(giây)</label>
+            <div class="col-sm-7">
+                <input type="number" ng-model="settingTimeout.updateLocation"/>
+            </div>
+        </div>
+        <div class="form-group">
+            <label class="col-sm-5 control-label">Gửi tọa độ sau(giây)</label>
+            <div class="col-sm-7">
+                <input type="number" ng-model="settingTimeout.sendLocation" />
+            </div>
+        </div>
     </form>
 </div>
 
