monitor: store user to sessionStorage

--- a/MyThesis/Monitor/app/index.html
+++ b/MyThesis/Monitor/app/index.html
@@ -10,7 +10,8 @@
     <link href="bower_components/toastr/toastr.min.css" rel="stylesheet" />
     <link href="bower_components/Ionicons/css/ionicons.min.css" rel="stylesheet" />
     <link href="assets/lumio/css/styles.css" rel="stylesheet" />
-    <link href="assets/css/common.css" rel="stylesheet" />
+    <link href="assets/css/common.css" rel="stylesheet"/>
+    <link href="bower_components/mapbox.js/mapbox.css" rel="stylesheet" />
 
     <script src="assets/lumio/js/lumino.glyphs.js"></script>
 
@@ -30,6 +31,7 @@
     <script src="bower_components/angular-modal-service/dst/angular-modal-service.min.js"></script>
     <script src="bower_components/spin.js/spin.min.js"></script>
     <script src="bower_components/angular-spinner/angular-spinner.min.js"></script>
+    <script src="bower_components/mapbox.js/mapbox.js"></script>
 
     <script src="src/app.js"></script>
     <script src="src/app.const.js"></script>
