--- a/MyThesis/Monitor/app/src/home/home.html
+++ b/MyThesis/Monitor/app/src/home/home.html
@@ -8,13 +8,14 @@
                 <span class="icon-bar"></span>
             </button>
             <a class="navbar-brand" href="#"><span>Ship</span>Monitor</a>
-            <ul class="user-menu">
+
+            <ul class="user-menu" ng-if="vm.currentUser.Id">
                 <li class="dropdown pull-right">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown"><svg class="glyph stroked male-user"><use xlink:href="#stroked-male-user"></use></svg> User <span class="caret"></span></a>
+                    <a class="dropdown-toggle clickable-element" data-toggle="dropdown"><svg class="glyph stroked male-user"><use xlink:href="#stroked-male-user"></use></svg> {{vm.currentUser.UserName}} <span class="caret"></span></a>
                     <ul class="dropdown-menu" role="menu">
-                        <li><a href="#"><svg class="glyph stroked male-user"><use xlink:href="#stroked-male-user"></use></svg> Profile</a></li>
-                        <li><a href="#"><svg class="glyph stroked gear"><use xlink:href="#stroked-gear"></use></svg> Settings</a></li>
-                        <li><a href="#"><svg class="glyph stroked cancel"><use xlink:href="#stroked-cancel"></use></svg> Logout</a></li>
+                        <li><a><svg class="glyph stroked male-user"><use xlink:href="#stroked-male-user"></use></svg> Profile</a></li>
+                        <li><a><svg class="glyph stroked gear"><use xlink:href="#stroked-gear"></use></svg> Settings</a></li>
+                        <li><a ng-click="vm.logout()"><svg class="glyph stroked cancel"><use xlink:href="#stroked-cancel"></use></svg> Logout</a></li>
                     </ul>
                 </li>
             </ul>
@@ -25,8 +26,8 @@
 
 <div id="sidebar-collapse" class="col-sm-3 col-lg-2 sidebar">
     <ul class="nav menu">
-        <li><a href="index.html"><svg class="glyph stroked dashboard-dial"><use xlink:href="#stroked-dashboard-dial"></use></svg> Trang chủ</a></li>
-        <li><a href="widgets.html"><svg class="glyph stroked calendar"><use xlink:href="#stroked-calendar"></use></svg> Hành trình tàu</a></li>
+        <li><a class="clickable-element"><svg class="glyph stroked dashboard-dial"><use xlink:href="#stroked-dashboard-dial"></use></svg> Trang chủ</a></li>
+        <li><a class="clickable-element"><svg class="glyph stroked calendar"><use xlink:href="#stroked-calendar"></use></svg> Hành trình tàu</a></li>
         <li role="presentation" class="divider"></li>
     </ul>
 
@@ -36,14 +37,16 @@
 
     <div class="row">
         <div class="col-lg-12">
-            <h1 class="page-header">Dashboard</h1>
+            <h1>Dashboard</h1>
+
+            <div id="leaflet-map" class="leaflet-map"></div>
         </div>
     </div><!--/.row-->
 
 </div> <!--/.main-->
 
 <div class="col-md-12 col-sm-12 col-xs-12">
-    <div class="overlay" id="overlay">
+    <div class="overlay" id="overlay" style="display: none;">
         <span us-spinner="{radius:30, width:8, length: 16}" spinner-key="spinnerSearch" spinner-start-active="false"></span>
     </div>
 </div>
