--- a/MyThesis/Simulator/app/src/createShipDialog/create-ship-dialog.html
+++ b/MyThesis/Simulator/app/src/createShipDialog/create-ship-dialog.html
@@ -11,6 +11,12 @@
             </div>
         </div> -->
         <div class="form-group">
+            <label class="col-sm-3 control-label">Chủ tàu</label>
+            <div class="col-sm-9">
+                <select class="form-control" ng-options="item.UserName as item.Id for item in users" ng-model="newShip.ShipType"></select>
+            </div>
+        </div>
+        <div class="form-group">
             <label class="col-sm-3 control-label">Loại tàu</label>
             <div class="col-sm-9">
                 <select class="form-control" ng-options="shipType.value as shipType.name for shipType in shipTypes" ng-model="newShip.ShipType"></select>
@@ -38,12 +44,6 @@
             <label class="col-sm-3 control-label">Số thuyền viên</label>
             <div class="col-sm-9">
                 <input type="number" class="form-control" ng-model="newShip.Sailors" placeholder="Số lượng thuyền viên ">
-            </div>
-        </div>
-        <div class="form-group">
-            <label class="col-sm-3 control-label">Điện thoại</label>
-            <div class="col-sm-9">
-                <input type="text" class="form-control" ng-model="newShip.Phone" placeholder="Số điện thoại liên lạc">
             </div>
         </div>
 
