--- a/MyThesis/Monitor/app/index.html
+++ b/MyThesis/Monitor/app/index.html
@@ -10,7 +10,7 @@
     <link href="bower_components/toastr/toastr.min.css" rel="stylesheet" />
     <link href="bower_components/Ionicons/css/ionicons.min.css" rel="stylesheet" />
     <link href="assets/lumio/css/styles.css" rel="stylesheet" />
-    <link href="assets/css/common.css" rel="stylesheet"/>
+    <link href="assets/css/common.css" rel="stylesheet" />
     <link href="bower_components/mapbox.js/mapbox.css" rel="stylesheet" />
 
     <script src="assets/lumio/js/lumino.glyphs.js"></script>
@@ -32,6 +32,8 @@
     <script src="bower_components/spin.js/spin.min.js"></script>
     <script src="bower_components/angular-spinner/angular-spinner.min.js"></script>
     <script src="bower_components/mapbox.js/mapbox.js"></script>
+    <script src="assets/script/moving_marker/moving_marker.js"></script>
+    <script src="assets/script/rotated_marker/rotated_marker.js"></script>
 
     <script src="src/app.js"></script>
     <script src="src/app.const.js"></script>
@@ -55,6 +57,8 @@
     <script src="src/home/homeCtrl.js"></script>
     <script src="src/home/homeDataSvc.js"></script>
     <script src="src/home/homeSvc.js"></script>
+
+    <script src="src/simulate/simulateCtrl.js"></script>
 
 </body>
 
