--- a/MyThesis/Monitor/app/src/simulate/simulate.html
+++ b/MyThesis/Monitor/app/src/simulate/simulate.html
@@ -26,8 +26,8 @@
 
 <div id="sidebar-collapse" class="col-sm-3 col-lg-2 sidebar">
     <ul class="nav menu">
-        <li class="active"><a class="clickable-element"><svg class="glyph stroked dashboard-dial"><use xlink:href="#stroked-dashboard-dial"></use></svg> Trang chủ</a></li>
-        <li><a class="clickable-element" ng-href="#/simulate"><svg class="glyph stroked calendar"><use xlink:href="#stroked-calendar"></use></svg> Hành trình tàu</a></li>
+        <li><a class="clickable-element" ng-href="#/home"><svg class="glyph stroked dashboard-dial"><use xlink:href="#stroked-dashboard-dial"></use></svg> Trang chủ</a></li>
+        <li class="active"><a class="clickable-element"><svg class="glyph stroked calendar"><use xlink:href="#stroked-calendar"></use></svg> Hành trình tàu</a></li>
         <li role="presentation" class="divider"></li>
     </ul>
 
@@ -37,7 +37,7 @@
 
     <div class="row">
         <div class="col-lg-12">
-            <h1>Danh sách tàu</h1>
+            <h1>Mô phỏng hành trình tàu</h1>
 
             <div id="leaflet-map" class="leaflet-map">
                 <select class="form-control ship-filter--home" ng-change="vm.changeMapLayer()"
