draw warning locations for monitor

--- a/MyThesis/Monitor/app/index.html
+++ b/MyThesis/Monitor/app/index.html
@@ -12,6 +12,7 @@
     <link href="assets/lumio/css/styles.css" rel="stylesheet" />
     <link href="assets/css/common.css" rel="stylesheet" />
     <link href="bower_components/mapbox.js/mapbox.css" rel="stylesheet" />
+    <link href="bower_components/Leaflet.Coordinates/dist/Leaflet.Coordinates-0.1.5.css" rel="stylesheet" />
 
     <script src="assets/lumio/js/lumino.glyphs.js"></script>
 
@@ -32,6 +33,7 @@
     <script src="bower_components/spin.js/spin.min.js"></script>
     <script src="bower_components/angular-spinner/angular-spinner.min.js"></script>
     <script src="bower_components/mapbox.js/mapbox.js"></script>
+    <script src="bower_components/Leaflet.Coordinates/dist/Leaflet.Coordinates-0.1.5.min.js"></script>
     <script src="assets/script/moving_marker/moving_marker.js"></script>
     <script src="assets/script/rotated_marker/rotated_marker.js"></script>
 
@@ -59,6 +61,11 @@
     <script src="src/home/homeSvc.js"></script>
 
     <script src="src/simulate/simulateCtrl.js"></script>
+
+    <script src="src/edit/editCtrl.js"></script>
+    <script src="src/edit/editDataSvc.js"></script>
+
+    <script src="src/internationalShip/internationalShipSvc.js"></script>
 
 </body>
 
