--- a/MyThesis/Monitor/app/src/edit/edit.html
+++ b/MyThesis/Monitor/app/src/edit/edit.html
@@ -27,8 +27,8 @@
 <div id="sidebar-collapse" class="col-sm-3 col-lg-2 sidebar">
     <ul class="nav menu">
         <li><a class="clickable-element" ng-href="#/home"><svg class="glyph stroked dashboard-dial"><use xlink:href="#stroked-dashboard-dial"></use></svg> Trang chủ</a></li>
-        <li class="active"><a class="clickable-element"><svg class="glyph stroked calendar"><use xlink:href="#stroked-calendar"></use></svg> Hành trình tàu</a></li>
-        <li><a class="clickable-element" ng-href="#/edit"><svg class="glyph stroked calendar"><use xlink:href="#stroked-calendar"></use></svg> Chỉnh sửa</a></li>
+        <li><a class="clickable-element" ng-href="#/simulate"><svg class="glyph stroked calendar"><use xlink:href="#stroked-calendar"></use></svg> Hành trình tàu</a></li>
+        <li class="active"><a class="clickable-element"><svg class="glyph stroked calendar"><use xlink:href="#stroked-calendar"></use></svg> Chỉnh sửa</a></li>
         <li role="presentation" class="divider"></li>
     </ul>
 
@@ -38,14 +38,38 @@
 
     <div class="row">
         <div class="col-lg-12">
-            <h3>Mô phỏng hành trình tàu</h3>
-
-            <div id="leaflet-map" class="leaflet-map">
-                <select class="form-control ship-filter--home" ng-change="vm.changeMapLayer()"
-                        ng-options="item.layer as item.name for item in vm.leafletMapLayers" ng-model="vm.selectedMapLayer"></select>
-            </div>
+            <h3>Chỉnh sửa thông tin tàu</h3>
         </div>
     </div><!--/.row-->
+    <br />
+    <div class="row">
+        <div class="col-lg-8">
+            <div class="alert alert-warning">
+                <label>Mã tàu: </label>
+                <select class="form-control" ng-options="item as item.Id for item in vm.ships" ng-model="vm.selectedShip"></select>
+            </div>
+        </div>
+    </div>
+    <br />
+    <div class="row" ng-if="vm.selectedShip.Id">
+        <div class="col-lg-8">
+            <div class="alert alert-info">
+                <ul class="list-group">
+                    <li class="list-group-item">
+                        Thuyền trưởng:
+                        <input type="text" ng-model="vm.selectedShip.Caption" />
+                    </li>
+                    <li class="list-group-item">
+                        Số lượng thuyền viên:
+                        <input type="number" ng-model="vm.selectedShip.Sailors" />
+                    </li>
+                    <li class="list-group-item">
+                        <button class="btn btn-primary" ng-click="vm.updateShip()">Lưu</button>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </div>
 
 </div> <!--/.main-->
 
