--- a/MyThesis/Monitor/app/src/home/home.html
+++ b/MyThesis/Monitor/app/src/home/home.html
@@ -28,6 +28,7 @@
     <ul class="nav menu">
         <li class="active"><a class="clickable-element"><svg class="glyph stroked dashboard-dial"><use xlink:href="#stroked-dashboard-dial"></use></svg> Trang chủ</a></li>
         <li><a class="clickable-element" ng-href="#/simulate"><svg class="glyph stroked calendar"><use xlink:href="#stroked-calendar"></use></svg> Hành trình tàu</a></li>
+        <li><a class="clickable-element" ng-href="#/edit"><svg class="glyph stroked calendar"><use xlink:href="#stroked-calendar"></use></svg> Chỉnh sửa</a></li>
         <li role="presentation" class="divider"></li>
     </ul>
 
@@ -37,7 +38,7 @@
 
     <div class="row">
         <div class="col-lg-12">
-            <h1>Danh sách tàu</h1>
+            <h3>Danh sách tàu</h3>
 
             <div id="leaflet-map" class="leaflet-map">
                 <select class="form-control ship-filter--home" ng-change="vm.changeMapLayer()"
