add weather tag

--- a/MyThesis/Monitor/app/index.html
+++ b/MyThesis/Monitor/app/index.html
@@ -65,6 +65,8 @@
     <script src="src/edit/editCtrl.js"></script>
     <script src="src/edit/editDataSvc.js"></script>
 
+    <script src="src/weather/weatherCtrl.js"></script>
+
     <script src="src/internationalShip/internationalShipSvc.js"></script>
 
 </body>
