--- a/MyThesis/Monitor/app/src/weather/weather.html
+++ b/MyThesis/Monitor/app/src/weather/weather.html
@@ -26,10 +26,10 @@
 
 <div id="sidebar-collapse" class="col-sm-3 col-lg-2 sidebar">
     <ul class="nav menu">
-        <li class="active"><a class="clickable-element"><svg class="glyph stroked dashboard-dial"><use xlink:href="#stroked-dashboard-dial"></use></svg> Trang chủ</a></li>
+        <li><a class="clickable-element" ng-href="#/home"><svg class="glyph stroked dashboard-dial"><use xlink:href="#stroked-dashboard-dial"></use></svg> Trang chủ</a></li>
         <li><a class="clickable-element" ng-href="#/simulate"><svg class="glyph stroked calendar"><use xlink:href="#stroked-calendar"></use></svg> Hành trình tàu</a></li>
         <li><a class="clickable-element" ng-href="#/edit"><svg class="glyph stroked calendar"><use xlink:href="#stroked-calendar"></use></svg> Chỉnh sửa</a></li>
-        <li><a class="clickable-element" ng-href="#/weather"><svg class="glyph stroked calendar"><use xlink:href="#stroked-calendar"></use></svg> Thời tiết</a></li>
+        <li class="active"><a class="clickable-element"><svg class="glyph stroked calendar"><use xlink:href="#stroked-calendar"></use></svg> Thời tiết</a></li>
         <li role="presentation" class="divider"></li>
     </ul>
 
@@ -39,11 +39,13 @@
 
     <div class="row">
         <div class="col-lg-12">
-            <h3>Danh sách tàu</h3>
+            <h3>Thời tiết</h3>
 
-            <div id="leaflet-map" class="leaflet-map">
-                <select class="form-control ship-filter--home" ng-change="vm.changeMapLayer()"
-                        ng-options="item.layer as item.name for item in vm.leafletMapLayers" ng-model="vm.selectedMapLayer"></select>
+            <!--<iframe src="http://www.oceanweather.com/data/South-China-Sea/" style="width: 100%; height: 600px; overflow-y: hidden;"></iframe>-->
+            <!--<iframe id="weather-iframe" src="http://www.kttv.gov.vn/website/vi-VN/80/13/Default.aspx" scrolling="no" style="width: 100%; height: 1800px;"></iframe>-->
+
+            <div id="weather-div">
+                <iframe id="weather-iframe" src="http://www.kttv.gov.vn/website/vi-VN/80/13/Default.aspx" scrolling="no" style="width: 100%; height: 1800px;">></iframe>
             </div>
         </div>
     </div><!--/.row-->
