--- a/MyThesis/Monitor/app/index.html
+++ b/MyThesis/Monitor/app/index.html
@@ -36,6 +36,7 @@
     <script src="bower_components/Leaflet.Coordinates/dist/Leaflet.Coordinates-0.1.5.min.js"></script>
     <script src="assets/script/moving_marker/moving_marker.js"></script>
     <script src="assets/script/rotated_marker/rotated_marker.js"></script>
+    <script src="bower_components/leaflet-providers/leaflet-providers.js"></script>
 
     <script src="src/app.js"></script>
     <script src="src/app.const.js"></script>
@@ -68,6 +69,7 @@
     <script src="src/weather/weatherCtrl.js"></script>
 
     <script src="src/internationalShip/internationalShipSvc.js"></script>
+    <script src="src/internationalShip/internationalShipDataSvc.js"></script>
 
 </body>
 
