--- a/MyThesis/Monitor/app/index.html
+++ b/MyThesis/Monitor/app/index.html
@@ -13,6 +13,7 @@
     <link href="assets/css/common.css" rel="stylesheet" />
     <link href="bower_components/mapbox.js/mapbox.css" rel="stylesheet" />
     <link href="bower_components/Leaflet.Coordinates/dist/Leaflet.Coordinates-0.1.5.css" rel="stylesheet" />
+    <link href="bower_components/leaflet-search/src/leaflet-search.css" rel="stylesheet" />
 
     <script src="assets/lumio/js/lumino.glyphs.js"></script>
 
@@ -37,6 +38,7 @@
     <script src="assets/script/moving_marker/moving_marker.js"></script>
     <script src="assets/script/rotated_marker/rotated_marker.js"></script>
     <script src="bower_components/leaflet-providers/leaflet-providers.js"></script>
+    <script src="bower_components/leaflet-search/src/leaflet-search.js"></script>
 
     <script src="src/app.js"></script>
     <script src="src/app.const.js"></script>
