--- a/MyThesis/Monitor/app/index.html
+++ b/MyThesis/Monitor/app/index.html
@@ -14,6 +14,8 @@
     <link href="bower_components/mapbox.js/mapbox.css" rel="stylesheet" />
     <link href="bower_components/Leaflet.Coordinates/dist/Leaflet.Coordinates-0.1.5.css" rel="stylesheet" />
     <link href="bower_components/leaflet-search/src/leaflet-search.css" rel="stylesheet" />
+    <link href="bower_components/leaflet-groupedlayercontrol/dist/leaflet.groupedlayercontrol.min.css" rel="stylesheet" />
+    <link href="assets/script/leaflet-openweathermap/leaflet-openweathermap.css" rel="stylesheet" />
 
     <script src="assets/lumio/js/lumino.glyphs.js"></script>
 
@@ -39,6 +41,8 @@
     <script src="assets/script/rotated_marker/rotated_marker.js"></script>
     <script src="bower_components/leaflet-providers/leaflet-providers.js"></script>
     <script src="bower_components/leaflet-search/src/leaflet-search.js"></script>
+    <script src="bower_components/leaflet-groupedlayercontrol/dist/leaflet.groupedlayercontrol.min.js"></script>
+    <script src="assets/script/leaflet-openweathermap/leaflet-openweathermap.js"></script>
 
     <script src="src/app.js"></script>
     <script src="src/app.const.js"></script>
@@ -50,6 +54,9 @@
 
     <script src="src/user/userSvc.js"></script>
     <script src="src/user/userDataSvc.js"></script>
+
+    <script src="src/common/commonDataSvc.js"></script>
+    <script src="src/common/commonSvc.js"></script>
 
     <script src="src/signUpPage/signUpPageCtrl.js"></script>
     <script src="src/signUpPage/signUpPageDataSvc.js"></script>
