--- a/MyThesis/Monitor/app/src/simulate/simulate.html
+++ b/MyThesis/Monitor/app/src/simulate/simulate.html
@@ -42,8 +42,8 @@
             <h3>Mô phỏng hành trình tàu</h3>
 
             <div id="leaflet-map" class="leaflet-map">
-                <select class="form-control ship-filter--home" ng-change="vm.changeMapLayer()"
-                        ng-options="item.layer as item.name for item in vm.leafletMapLayers" ng-model="vm.selectedMapLayer"></select>
+                <!--<select class="form-control ship-filter--home" ng-change="vm.changeMapLayer()"
+                        ng-options="item.layer as item.name for item in vm.leafletMapLayers" ng-model="vm.selectedMapLayer"></select>-->
             </div>
         </div>
     </div><!--/.row-->
