Delete ship/storm at monitor

--- a/MyThesis/Monitor/app/index.html
+++ b/MyThesis/Monitor/app/index.html
@@ -78,8 +78,8 @@
 
     <script src="src/weather/weatherCtrl.js"></script>
 
-    <script src="src/internationalShip/internationalShipSvc.js"></script>
-    <script src="src/internationalShip/internationalShipDataSvc.js"></script>
+    <script src="src/editStorm/stormDataSvc.js"></script>
+    <script src="src/editStorm/stormCtrl.js"></script>
 
 </body>
 
