update ui for control layer

--- a/MyThesis/Monitor/app/index.html
+++ b/MyThesis/Monitor/app/index.html
@@ -14,6 +14,7 @@
     <link href="bower_components/mapbox.js/mapbox.css" rel="stylesheet" />
     <link href="bower_components/Leaflet.Coordinates/dist/Leaflet.Coordinates-0.1.5.css" rel="stylesheet" />
     <link href="bower_components/leaflet-search/src/leaflet-search.css" rel="stylesheet" />
+    <link href="assets/script/LeafletStyledLayerControl/css/styledLayerControl.css" rel="stylesheet" />
     <link href="bower_components/leaflet-groupedlayercontrol/dist/leaflet.groupedlayercontrol.min.css" rel="stylesheet" />
     <link href="assets/script/leaflet-openweathermap/leaflet-openweathermap.css" rel="stylesheet" />
 
@@ -43,6 +44,7 @@
     <script src="bower_components/leaflet-providers/leaflet-providers.js"></script>
     <script src="bower_components/leaflet-search/src/leaflet-search.js"></script>
     <script src="bower_components/leaflet-groupedlayercontrol/dist/leaflet.groupedlayercontrol.min.js"></script>
+    <script src="assets/script/LeafletStyledLayerControl/styledLayerControl.js"></script>
     <script src="assets/script/leaflet-openweathermap/leaflet-openweathermap.js"></script>
 
     <script src="src/app.js"></script>
