--- a/MyThesis/Monitor/app/index.html
+++ b/MyThesis/Monitor/app/index.html
@@ -83,6 +83,7 @@
     <script src="src/editStorm/stormDataSvc.js"></script>
     <script src="src/editStorm/stormCtrl.js"></script>
 
+    <script src="src/law/lawCtrl.js"></script>
 </body>
 
 </html>
