new ui simulator, monitor

--- a/MyThesis/Monitor/app/index.html
+++ b/MyThesis/Monitor/app/index.html
@@ -9,8 +9,6 @@
     <link href="bower_components/font-awesome/css/font-awesome.min.css" rel="stylesheet" />
     <link href="bower_components/toastr/toastr.min.css" rel="stylesheet" />
     <link href="bower_components/Ionicons/css/ionicons.min.css" rel="stylesheet" />
-    <link href="assets/lumio/css/styles.css" rel="stylesheet" />
-    <link href="assets/css/common.css" rel="stylesheet" />
     <link href="bower_components/mapbox.js/mapbox.css" rel="stylesheet" />
     <link href="bower_components/Leaflet.Coordinates/dist/Leaflet.Coordinates-0.1.5.css" rel="stylesheet" />
     <link href="bower_components/leaflet-search/src/leaflet-search.css" rel="stylesheet" />
@@ -18,7 +16,9 @@
     <link href="bower_components/leaflet-groupedlayercontrol/dist/leaflet.groupedlayercontrol.min.css" rel="stylesheet" />
     <link href="assets/script/leaflet-openweathermap/leaflet-openweathermap.css" rel="stylesheet" />
 
-    <script src="assets/lumio/js/lumino.glyphs.js"></script>
+    <link href="assets/css/common.css" rel="stylesheet" />
+    <link href="assets/css/login-page.css" rel="stylesheet" />
+    <link href="assets/css/main.css" rel="stylesheet" />
 
 </head>
 
