--- a/MyThesis/Monitor/app/src/simulate/simulate.html
+++ b/MyThesis/Monitor/app/src/simulate/simulate.html
@@ -1,56 +1,37 @@
-﻿<nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-    <div class="container-fluid">
-        <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#sidebar-collapse">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand" href="#"><span>Ship</span>Monitor</a>
-
-            <ul class="user-menu" ng-if="vm.currentUser.Id">
-                <li class="dropdown pull-right">
-                    <a class="dropdown-toggle clickable-element" data-toggle="dropdown"><svg class="glyph stroked male-user"><use xlink:href="#stroked-male-user"></use></svg> {{vm.currentUser.UserName}} <span class="caret"></span></a>
-                    <ul class="dropdown-menu" role="menu">
-                        <!--<li><a><svg class="glyph stroked male-user"><use xlink:href="#stroked-male-user"></use></svg> Profile</a></li>
-                        <li><a><svg class="glyph stroked gear"><use xlink:href="#stroked-gear"></use></svg> Settings</a></li>-->
-                        <li><a ng-click="vm.logout()"><svg class="glyph stroked cancel"><use xlink:href="#stroked-cancel"></use></svg> Logout</a></li>
-                    </ul>
-                </li>
-            </ul>
+﻿<div class="col-xs-12 col-sm-12 col-md-12 main__navbar">
+    <div class="main__navbar__brand">
+        <span>RECOM</span>
+        <div class="main__navbar__user">
+            <span class="main__navbar__user__text">{{vm.currentUser.UserName}}</span>
+            <a class="main__navbar__user__button" ng-click="vm.logout()"><span class="glyphicon glyphicon-off"></span></a>
         </div>
+    </div>
 
-    </div><!-- /.container-fluid -->
-</nav>
+</div>
 
-<div id="sidebar-collapse" class="col-sm-3 col-lg-2 sidebar">
-    <ul class="nav menu">
-        <li><a class="clickable-element" ng-href="#/home"><span class="ion-home ion-icon-custom"></span> Trang chủ</a></li>
-        <li class="active"><a class="clickable-element"><span class="ion-arrow-graph-down-right ion-icon-custom"></span> Hành trình tàu</a></li>
-        <li><a class="clickable-element" ng-href="#/edit"><span class="ion-android-boat ion-icon-custom"></span> Chỉnh sửa thông tin tàu</a></li>
-        <li ng-if="vm.currentUser.Id === 1"><a class="clickable-element" ng-href="#/storm"><span class="ion-ios-thunderstorm-outline ion-icon-custom"></span> Chỉnh sửa thông tin bão</a></li>
-        <li><a class="clickable-element" ng-href="#/weather"><span class="ion-ios-cloudy-night-outline ion-icon-custom"></span> Thời tiết</a></li>
-        <li><a class="clickable-element" ng-href="#/law"><span class="ion-ios-cloudy-night-outline ion-icon-custom"></span> Pháp luật</a></li>
-        <li role="presentation" class="divider"></li>
+<div class="col-xs-12 col-sm-12 col-md-12 main__menu">
+    <ul class="list-inline main__menu__ul pull-right">
+        <li class="main__menu__li"><a href="#/home">Trang chủ</a></li>
+        <li class="main__menu__li main__menu__li--active"><a>Hành trình tàu</a></li>
+        <li class="main__menu__li"><a href="#/edit">Thông Tin Tàu</a></li>
+        <li class="main__menu__li"><a href="#/storm">Thông Tin Bão</a></li>
+        <li class="main__menu__li"><a href="#/weather">Thời Tiết</a></li>
+        <li class="main__menu__li"><a href="#/law">Pháp Luật</a></li>
     </ul>
+</div>
 
-</div><!--/.sidebar-->
+<div class="col-xs-12 col-sm-12 col-md-12 main__container">
+    <div class="col-xs-3 col-sm-3 col-md-3 small-col" ng-if="vm.warningMessage || vm.warningMessage">
+        <div class="home__warning-title">Cảnh Báo</div>
+        <p ng-bind-html="vm.warningMessage" ng-if="vm.warningMessage"></p>
+        <p ng-bind-html="vm.warningMessageForStorm" ng-if="vm.warningMessageForStorm"></p>
+    </div>
+    <div class="" ng-class="{'col-xs-12 col-sm-12 col-md-12': !vm.warningMessage && !vm.warningMessage, 'col-xs-9 col-sm-9 col-md-9 big-col': vm.warningMessage || vm.warningMessage}">
+        <div id="leaflet-map" class="leaflet-map"></div>
+    </div>
+</div>
 
-<div class="col-sm-9 col-sm-offset-3 col-lg-10 col-lg-offset-2 main">
-
-    <div class="row">
-        <div class="col-lg-12">
-            <h3>Mô phỏng hành trình tàu</h3>
-
-            <div id="leaflet-map" class="leaflet-map">
-                <!--<select class="form-control ship-filter--home" ng-change="vm.changeMapLayer()"
-                        ng-options="item.layer as item.name for item in vm.leafletMapLayers" ng-model="vm.selectedMapLayer"></select>-->
-            </div>
-        </div>
-    </div><!--/.row-->
-
-</div> <!--/.main-->
+<div class="main__author">@Trương Văn Linh - Nguyễn Thành Vinh</div>
 
 <div class="col-md-12 col-sm-12 col-xs-12">
     <div class="overlay" id="overlay" style="display: none;">
