--- a/MyThesis/Monitor/app/src/loginPage/loginPage.html
+++ b/MyThesis/Monitor/app/src/loginPage/loginPage.html
@@ -1,24 +1,24 @@
-﻿<div class="col-xs-10 col-xs-offset-1 col-sm-8 col-sm-offset-2 col-md-4 col-md-offset-4">
-    <div class="login-panel panel panel-default">
-        <div class="panel-heading">Đăng Nhập</div>
-        <div class="panel-body">
-            <form role="form">
-                <fieldset>
-                    <div class="form-group">
-                        <input class="form-control" placeholder="Tài khoản" type="text" autofocus="" ng-model="vm.user.UserName">
-                    </div>
-                    <div class="form-group">
-                        <input class="form-control" placeholder="Mật khẩu" type="password" ng-model="vm.user.Password">
-                    </div>
-                    <a class="btn btn-primary" ng-click="vm.login()" ng-subm>Đăng nhập</a>
-                </fieldset>
-            </form>
-            <div class="pull-right">
-                <a href="#/signup">Tạo tài khoản mới</a>
-            </div>
+﻿<div class="col-md-offset-4 col-md-4">
+    <form class="form-horizontal login-page__form col-md-offset-1 col-md-10 col-sm-offset-1 col-sm-10 col-xs-offset-1 col-xs-10">
+        <div class="form-group">
+            <label class="login-page__form__title control-label">Recom</label>
         </div>
-    </div>
+        <div class="form-group">
+            <input type="text" class="form-control login-page__form__input" placeholder="Tài khoản" ng-model="vm.user.UserName">
+        </div>
+        <div class="form-group">
+            <input type="password" class="form-control login-page__form__input" placeholder="Mật khẩu" ng-model="vm.user.Password">
+        </div>
+        <div class="form-group">
+            <button class="login-page__form__button pull-right" ng-click="vm.login()">Đăng nhập</button>
+        </div>
+        <div class="form-group">
+            <a href="#/signup" class="control-label login-page__form__ps">Đăng ký tài khoản mới</a>
+        </div>
+    </form>
 </div>
+
+<div class="login-page__company">@Trương Văn Linh - Nguyễn Thành Vinh</div>
 
 <div class="col-md-12 col-sm-12 col-xs-12">
     <div class="overlay" id="overlay" style="display: none;">
